Changes since version 3.2.0
---------------------------

- Added code generated from FileParser.ice to the IceGrid library.

- Fixed collocation optimization to also work for indirect proxies
  referring to a replica group.

- The findAllReplicas() operation in the IceGrid::Query interface now
  accepts well-known proxies from a replica group. This allows you to
  retrieve the replicas of a replicated object using its well-known
  proxy.

Changes since version 3.2b
--------------------------

- The icegridadmin command line utility now tries to connect to a
  slave registry if the master is not available.

Changes since version 3.1.1
---------------------------

- Deprecated Ice.UseEventLog. Windows services should no longer use
  this property! Also fixed a bug with the windows event logger which
  would cause hangs if the event log became full.

- Under Windows Ice Services (Ice::Service) always use the windows
  event logger unless initData is otherwise configured. Installing the
  service will now create the appropriate registry keys, and uninstalling
  the service will remove them.

- createObjectAdapter() and propertyToProxy() print warnings if
  unknown properties are found during creation of the adapter or
  proxy. These warnings can be disabled by setting the property
  Ice.Warn.UnknownProperties=0.

- Fixed a race condition that could cause an assertion failure when
  using thread-per-connection.

- Added the property Ice.Default.EndpointSelection. If not defined,
  the default value is "Random".

- Proxies and object adapters can now be configured to use
  thread-per-connection.

- IceBox services no longer inherit the properties of the container
  by default. If this is the desired behavior set the property
  IceBox.InheritProperties to 1.

- Fixed a bug where new connections are being accepted but not
  serviced correctly when using the thread pool concurrency model if
  the number of file descriptors registered with the thread pool