@@ -58,6 +58,7 @@ Database::Database(const Ice::ObjectAdapterPtr& registryAdapter,
     _master(info.name == "Master"),
     _replicaCache(_communicator, topicManager),
     _nodeCache(_communicator, _replicaCache, info.name),
+    _adapterCache(_communicator),
     _objectCache(_communicator),
     _allocatableObjectCache(_communicator),
     _serverCache(_communicator, _nodeCache, _adapterCache, _objectCache, _allocatableObjectCache),
